@@ -2,6 +2,7 @@ package org.example.Models;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Rook extends ChessmanAdapter {
     public Rook(boolean isWhite) {
@@ -13,13 +14,86 @@ public class Rook extends ChessmanAdapter {
         return CommonServices.moveHorizontalOrVertical(from, to) && CommonServices.isPositionEmptyOrEnemy(from, to);
     }
 
+    private boolean hasMoved = false;
+
     @Override
     public List<String> getAvailableMoves(Position from, Board board) {
+
         return Arrays.stream(board.getPositions())
                 .flatMap(Arrays::stream)
                 .filter(to -> canMove(from, to) && !board.isChessmanBetweenPositions(from, to))
                 .map(Position::toString)
-                .toList();
+                .collect(Collectors.toList());
+
     }
 
+
+    public boolean isCastlingMovePossible(Position from, Board board) {
+        if (hasMoved) {
+            return false;
+        }
+        if (from.getChessman().isWhite()) {
+            if (!board.isWhiteKingMoves()) {
+                if (from.getY() == 0) {
+                    if (!board.isChessmanBetweenPositions(from, board.getPositions()[0][4])) {
+                        if(!board.getAvailableMovesForPosition(
+                                List.of(
+                                board.getPositions()[0][2],
+                                board.getPositions()[0][3],
+                                board.getPositions()[0][4])
+                        )){
+                            return true;
+                        }
+                    }
+                } else{
+                    if(!board.isChessmanBetweenPositions(from, board.getPositions()[0][4])){
+                        if(!board.getAvailableMovesForPosition(
+                                List.of(
+                                        board.getPositions()[0][5],
+                                        board.getPositions()[0][6]
+                                )
+                        )){
+                            return true;
+                        }
+                    }
+                }
+            }} else{
+                if(!board.isBlackKingMoves()){
+                    if (from.getY() == 0) {
+                        if (!board.isChessmanBetweenPositions(from, board.getPositions()[7][3])) {
+                            if(!board.getAvailableMovesForPosition(
+                                    List.of(
+                                            board.getPositions()[7][2],
+                                            board.getPositions()[7][3],
+                                            board.getPositions()[7][4])
+                            )){
+                                return true;
+                            }
+                        }
+                    } else{
+                        if(!board.isChessmanBetweenPositions(from, board.getPositions()[7][3])){
+                            if(!board.getAvailableMovesForPosition(
+                                    List.of(
+                                            board.getPositions()[7][5],
+                                            board.getPositions()[7][6]
+                                    )
+                            )){
+                                return true;
+                            }
+                        }
+                    }
+                }
+            }
+        return false;
+    }
+
+
+    public boolean isHasMoved() {
+        return hasMoved;
+    }
+
+
+    public void setHasMoved(boolean hasMoved) {
+        this.hasMoved = hasMoved;
+    }
 }
